--- a/PhotoWeatherApp/PhotoWeatherApp/Views/Base.lproj/Main.storyboard
+++ b/PhotoWeatherApp/PhotoWeatherApp/Views/Base.lproj/Main.storyboard
@@ -17,23 +17,30 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jVj-pW-ER7">
-                                <rect key="frame" x="16" y="103" width="361" height="35"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pnt-FI-VZO">
+                                <rect key="frame" x="16" y="117" width="361" height="618"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jVj-pW-ER7">
+                                <rect key="frame" x="16" y="68" width="361" height="34.333333333333343"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Select Photo"/>
                                 <connections>
                                     <action selector="tapOnSelectPhotoButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="rWF-de-RNq"/>
                                 </connections>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pnt-FI-VZO">
-                                <rect key="frame" x="16" y="174" width="361" height="644"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="jVj-pW-ER7" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="9" id="N3B-pE-3r2"/>
+                            <constraint firstItem="jVj-pW-ER7" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="cAk-g1-XZT"/>
+                            <constraint firstItem="jVj-pW-ER7" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="ytK-Ai-3M5"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="imageView" destination="pnt-FI-VZO" id="2SE-Pf-IGb"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
